--- a/src/app/showcase/components/table/tablestatedemo.html
+++ b/src/app/showcase/components/table/tablestatedemo.html
@@ -22,16 +22,16 @@
                 </tr>
                 <tr>
                     <th>
-                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'name', 'contains')" [value]="dt1.filters['name']?.value" placeholder="Search by Name" class="p-column-filter">
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'name', 'contains')" [value]="$any(dt1.filters['name'])?.value" placeholder="Search by Name" class="p-column-filter">
                     </th>
                     <th>
-                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'country.name', 'contains')" [value]="dt1.filters['country.name']?.value" placeholder="Search by Country" class="p-column-filter">
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'country.name', 'contains')" [value]="$any(dt1.filters['country.name'])?.value" placeholder="Search by Country" class="p-column-filter">
                     </th>
                     <th>
-                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'representative.name', 'contains')" [value]="dt1.filters['representative.name']?.value" placeholder="Search by Representative" class="p-column-filter">
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'representative.name', 'contains')" [value]="$any(dt1.filters['representative.name'])?.value" placeholder="Search by Representative" class="p-column-filter">
                     </th>
                     <th>
-                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'status', 'contains')" [value]="dt1.filters['status']?.value" placeholder="Search by Status" class="p-column-filter">
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'status', 'contains')" [value]="$any(dt1.filters['status'])?.value" placeholder="Search by Status" class="p-column-filter">
                     </th>
                 </tr>
             </ng-template>
@@ -78,16 +78,16 @@
                 </tr>
                 <tr>
                     <th>
-                        <input pInputText type="text" (input)="dt2.filter($event.target.value, 'name', 'contains')" [value]="dt2.filters['name']?.value" placeholder="Search by Name" class="p-column-filter">
+                        <input pInputText type="text" (input)="dt2.filter($event.target.value, 'name', 'contains')" [value]="$any(dt2.filters['name'])?.value" placeholder="Search by Name" class="p-column-filter">
                     </th>
                     <th>
-                        <input pInputText type="text" (input)="dt2.filter($event.target.value, 'country.name', 'contains')" [value]="dt2.filters['country.name']?.value" placeholder="Search by Country" class="p-column-filter">
+                        <input pInputText type="text" (input)="dt2.filter($event.target.value, 'country.name', 'contains')" [value]="$any(dt2.filters['country.name'])?.value" placeholder="Search by Country" class="p-column-filter">
                     </th>
                     <th>
-                        <input pInputText type="text" (input)="dt2.filter($event.target.value, 'representative.name', 'contains')" [value]="dt2.filters['representative.name']?.value" placeholder="Search by Representative" class="p-column-filter">
+                        <input pInputText type="text" (input)="dt2.filter($event.target.value, 'representative.name', 'contains')" [value]="$any(dt2.filters['representative.name'])?.value" placeholder="Search by Representative" class="p-column-filter">
                     </th>
                     <th>
-                        <input pInputText type="text" (input)="dt2.filter($event.target.value, 'status', 'contains')" [value]="dt2.filters['status']?.value" placeholder="Search by Status" class="p-column-filter">
+                        <input pInputText type="text" (input)="dt2.filter($event.target.value, 'status', 'contains')" [value]="$any(dt2.filters['status'])?.value" placeholder="Search by Status" class="p-column-filter">
                     </th>
                 </tr>
             </ng-template>
